--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@clerk/nextjs": "^4.15.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "swell-js": "^3.20.1",
     "swell-node": "^4.0.11",
     "swr": "^2.1.0"
